<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/profilebkg"
    android:orientation="vertical"
    android:layout_gravity="center">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="24dp"
            android:background="@drawable/lavender_border">

            <TextView
                android:id="@+id/textViewLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_text_view"
                android:textAlignment="center"
                android:textColor="@color/lavender"
                android:textSize="36sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/login_mail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:padding="8dp"
                android:hint="@string/email_text_view"
                android:inputType="text"
                android:textColor="@color/black"
                android:background="@drawable/lavender_border"
                android:drawableStart="@drawable/baseline_email_24"
                android:drawablePadding="8dp"
                android:ems="13"
                tools:ignore="Autofill"/>

            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:padding="8dp"
                android:hint="@string/password_text_view"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:background="@drawable/lavender_border"
                android:drawableStart="@drawable/baseline_lock_24"
                android:drawablePadding="8dp"
                android:ems="13"
                tools:ignore="Autofill"/>

            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/login_text_view"
                android:textSize="18sp"
                android:layout_marginTop="30dp"
                app:cornerRadius="20dp"/>

            <TextView
                android:id="@+id/forgotpassword"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:clickable="true"
                android:focusable="true"
                android:padding="8dp"
                android:text="@string/forgot_password"
                android:textColor="@color/lavender"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/signupredirecttext"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:clickable="true"
                android:focusable="true"
                android:padding="8dp"
                android:text="@string/singupredirecttext"
                android:textColor="@color/lavender"
                android:textSize="18sp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>